# sw_pipeline

./: .gitignore  README.md  pyproject.toml
config/: base.yaml
config/events/: storm_20241010_11.yaml  storm_20241231_20250101.yaml
docs/: PROJECT_INTRODUCTION.md
src/sw_pipeline/: __init__.py  app.py  cleanup.py  cli.py  config.py  discovery.py  downloaders.py  models.py  storage.py  utils.py
src/sw_pipeline/internal/: __init__.py  gold_core.py
src/sw_pipeline/internal/gnss_core/: __init__.py  auxiliary.py  config.py  constants.py  download.py  models.py  pipeline.py  plotting.py  plotting_v2.py  preprocess.py  processing.py  processing_v2.py  sources.py  utils.py  (+1 more)
src/sw_pipeline/normalizers/: __init__.py  gnss.py
src/sw_pipeline/pipelines/: __init__.py  event.py  figures.py  gnss_grid.py  gnss_raw.py  gold.py  omni.py
src/sw_pipeline/providers/: __init__.py  gnss_grid.py  gnss_raw.py  gold.py  omni.py
src/sw_pipeline/registry/: __init__.py  legacy_import.py  manifests.py  pairing.py
src/sw_pipeline/renderers/: __init__.py  gnss_map.py  gold_map.py  omni_series.py  overlay.py  panel.py  station_series.py  style.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  helpers.py
tests/integration/: test_integration.py
tests/unit/: test_app.py  test_cache_first.py  test_cleanup.py  test_config.py  test_downloads.py  test_gold_core.py  test_gold_overlay.py  test_internal_processing.py  test_manifests.py  test_normalizers.py  test_omni_renderer.py  test_overlay_renderer.py  test_pairing.py  test_panel_renderer.py  test_station_series.py
(+6 files in other folders)
