[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sw-pipeline"
version = "0.1.0"
description = "Unified event-driven space weather pipeline for GNSS, GOLD, and OMNI products"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.32",
  "pandas>=2.3",
  "numpy>=2.3",
  "pyarrow>=23.0",
  "xarray>=2025.1",
  "netCDF4>=1.7",
  "matplotlib>=3.9",
  "scipy>=1.15",
  "cartopy>=0.24",
  "apexpy>=2.1",
  "pyproj>=3.7",
  "georinex>=1.16",
  "ncompress>=1.0",
]

[project.scripts]
swp = "sw_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
